--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -98,7 +98,7 @@
                     />
                     <!--feature3-->
                     <img
-                        src="assets/img/match.jpg"
+                        src="assets/img/match.png"
                         data-src="img/digital.jpg"
                         alt="Computer"
                         class="features__img lazy-img"
@@ -203,8 +203,8 @@
 	                <div class="col-md-6 section-3-box wow fadeInLeft">
 	                	<div class="row">
 	                		<div class="col-md-3">
-	                			 <img class="rounded-circle" src="assets/img/comment1.jpg" width="w-75 p-3" alt="person 1">
-                                 <p class="text-center">Allison Li Seattle</p>
+	                			 <img class="rounded-circle" src="assets/img/panda.jpg" width="w-75 p-3" alt="person 1">
+                                 <p class="text-center">Allison Panda Seattle</p>
 	                		</div>
 	                		<div class="col-md-9">
 	                			<h3>Best roommates match application ever!</h3>
@@ -219,8 +219,8 @@
 	                <div class="col-md-6 section-3-box wow fadeInLeft">
 	                	<div class="row">
 	                		<div class="col-md-3">
-	                			<img class="rounded-circle" src="assets/img/comment2.jpg" width="w-75 p-3" alt="person 2">
-                                 <p class="text-center">Josh Mendes Miami</p>
+	                			<img class="rounded-circle" src="assets/img/tortise.jpg" width="w-75 p-3" alt="person 2">
+                                 <p class="text-center">Josh Tortise Miami</p>
 	                		</div>
 	                		<div class="col-md-9">
 	                			<h3>It has everything I looked for.</h3>
@@ -236,8 +236,8 @@
 	                <div class="col-md-6 section-3-box wow fadeInLeft">
 	                	<div class="row">
 	                		<div class="col-md-3">
-	                			<img class="rounded-circle" src="assets/img/comment3.jpg" width="w-75 p-3" alt="person3">
-                                 <p class="text-center">Jessica Davis Atlanta</p>
+	                			<img class="rounded-circle" src="assets/img/racoon.jpg" width="w-75 p-3" alt="person3">
+                                 <p class="text-center">Jessica Racoon Atlanta</p>
 	                		</div>
 	                		<div class="col-md-9">
 	                			<h3>Overrall good experience</h3>
@@ -252,8 +252,8 @@
 	                <div class="col-md-6 section-3-box wow fadeInLeft">
 	                	<div class="row">
 	                		<div class="col-md-3">
-	                			<img class="rounded-circle" src="assets/img/comment4.jpg" width="w-75 p-3" alt="person 4">
-                                 <p class="text-center">Adam Brown Denver</p>
+	                			<img class="rounded-circle" src="assets/img/dog.jpg" width="w-75 p-3" alt="person 4">
+                                 <p class="text-center">Adam Doggie Denver</p>
 	                		</div>
 	                		<div class="col-md-9">
 	                			<h3>Easy to find a roommate here.</h3>
