--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
 					<a class="nav-link scroll-link" href="#section-1">Features</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link scroll-link" href="#section-2">Search</a>
+					<a class="nav-link scroll-link" href="#section-2">Locations</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link scroll-link" href="#section-3">Testimonials</a>
@@ -46,13 +46,13 @@
 					<a class="nav-link scroll-link" href="#section-4">Item 4</a>
 				</li>  %>
 					<% if logged_in? and admin_user?%>
-					<li class="nav-link"><%= link_to 'Search', search_path, method: :get %></li>
-					<li class="nav-link"><%= link_to 'Data', underoofadmin_path, method: :get %></li>
-					<li class="nav-link"><%= link_to 'Log out', logout_path, method: :delete %></li>
+					<button class="round-shape btn  button-lock"><%= link_to 'Search', search_path, method: :get %></button>
+					<button class="round-shape btn  button-lock"> class="nav-link"><%= link_to 'Data', underoofadmin_path, method: :get %></button>
+					<button class="round-shape btn  button-lock"><%= link_to 'Log out', logout_path, method: :delete %></button>
 				<% elsif logged_in? and !admin_user?%>
-					<li class="nav-link"><%= link_to 'Search', search_path, method: :get %></li>
-					<li class="nav-link"><%= link_to 'Profile', edit_user_path(current_user) %></li>
-					<li class="nav-link"><%= link_to 'Log out', logout_path, method: :delete %></li>
+					<button class="round-shape btn  button-lock"><%= link_to 'Search', search_path, method: :get %></button>
+					<button class="round-shape btn  button-lock"><%= link_to 'Profile', edit_user_path(current_user) %></button>
+					<button class="round-shape btn  button-lock"><%= link_to 'Log out', logout_path, method: :delete %></button>
 				<% else %>
 					<button class="round-shape btn  button-lock"><%= link_to 'Sign Up', signup_path%></button>  
 					<button class="round-shape btn  button-lock"><%= link_to 'Sign In', signin_path%></button>
