Refine home page UI

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -97,6 +97,10 @@
 //     float: left;
 //     margin-left: 15px;
 // }
+.alert{
+  height: 50px;
+  margin-bottom: 0px;
+}
 #bootstrap-overrides a {
     color: #212022;
     // border-bottom: 1px dashed #a365bc;
