--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -28,7 +28,8 @@
 
   <div class="col-sm-10">
     <% if current_user.channels.include?(@channel) %>
-    
+      <%= form.text_field :body, class: "form-control" %>
+      <% end %>
     <% else %>
       <%= link_to "Join #{@channel.name}", channel_channel_user_path(@channel), method: :post %>
     <% end %>
