--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -41,7 +41,7 @@
           <a href="https://www.linkedin.com/in/xulin-wang-6763611a8/">Xulin Wang, xwang143@brandeis.edu</a>
         </li>
         <li >
-          <a href="https://www.linkedin.com/in/zheng-chu-62553a1a0/">Zheng Chu, czzzzn1001@gmail.com</a>
+          <a href="https://www.linkedin.com/in/zheng-chu-62553a1a0/">Zheng Chu, zhengchu@brandeis.com</a>
         </li>
       </ul>
     </div> 
