--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,19 +1,29 @@
+<div class="row">
+    <br><br><br>
+</div>
+<div class="row">
+    <div class="col-3"></div>
+    <div class="col-6">
 <%= form_for @user, local: true do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
 
     <div class="form-group">
+      <span class="fa fa-user-circle errspan"></span>
       <%= f.text_field :name, class: "form-control", placeholder: "User Name" %>
     </div>
 
     <div class="form-group">
+      <span class="fa fa-envelope errspan"></span>
       <%= f.email_field :email, class: "form-control", placeholder: "Email" %>
     </div>
 
     <div class="form-group">
+      <span class="fa fa-unlock-alt errspan"></span>
       <%= f.password_field :password, class: "form-control", placeholder: "Password: Upper&Lower, Number, Total Length 8-15" %>
     </div>
 
     <div class="form-group">
+      <span class="fa fa-unlock-alt errspan"></span>
       <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirm Password" %>
     </div>
 
@@ -24,3 +34,11 @@
     <%= f.submit yield(:button_text), class: "btn btn-dark" %>
 
 <% end %>
+   </div>
+    <div class="col-3"></div>
+</div>
+<div class="row">
+    <br><br><br>
+    <br><br><br>
+    <br>
+</div>
