--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,6 @@
-<div class="container">
-    <h1>Sign Up</h1>
+<div class="container img-bg">
+    <h1 class="title">Sign Up</h1>
     <% provide(:button_text, 'Sign Up') %>
-    <div class="row">
-        <div class='col-sm-5'>
-        <%= render 'form', user: @user %>
-        </div>
-    </div>
+    <%= render 'form', user: @user %>
 </div>
 <!--<button class="btn new"><%= link_to 'Back', users_path %></button>-->
