Use Webpacker to compile js and assets pipeline to deal with css and images

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
 	<div class="container">
 		<div class="logo">
 			<a href="/">
-				<img src="/assets/img/logo.png">
+				<%= image_tag("logo.png", alt: "logo.png")%>
 			</a>
 		</div>
 		<%# <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
