--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/animate.css">
+    <%# <link rel="stylesheet" href="/assets/css/animate.css">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/media-queries.css">
+    <link rel="stylesheet" href="/assets/css/media-queries.css"> %>
+    <%# <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %> %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -31,19 +32,32 @@
     
 
     <!-- Javascript Added by template-->
-		<script src="/assets/js/jquery-3.3.1.min.js"></script>
-		<script src="/assets/js/jquery-migrate-3.0.0.min.js"></script>
+		<%# <script src="/assets/js/jquery-3.3.1.min.js"></script>
+		<script src="/assets/js/jquery-migrate-3.0.0.min.js"></script> %>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <script src="/assets/js/jquery.backstretch.min.js"></script>
+    <%# <script src="/assets/js/jquery.backstretch.min.js"></script>
     <script src="/assets/js/wow.min.js"></script>
     <script src="/assets/js/waypoints.min.js"></script>
-    <script src="/assets/js/scripts.js"></script>
+    <script src="/assets/js/scripts.js"></script> %>
 
+    <%= javascript_pack_tag 'jquery-3', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'jquery-migrate-3', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'jquery', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'wow', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'waypoints', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'scripts', 'data-turbolinks-track': 'reload' %>
+    
+    
+    
+    
+    
+    
     <!-- Js added for cities slider-->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="/assets/js/my_slide.js"></script>
-    <%# <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> %>
+    <%# <script src="/assets/js/my_slide.js"></script> %>
+    <%= javascript_pack_tag 'my_slide', 'data-turbolinks-track': 'reload' %>
+    
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
