--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -15,7 +15,8 @@
             <div id="carousel-example" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="assets/img/backgrounds/bg1.jpg" class="d-block w-100" alt="img1">
+                        <%=image_tag("bg1.jpg", class: "d-block w-100", alt: "img-1")%>
+                        <%# <img src="assets/img/backgrounds/bg1.jpg" class="d-block w-100" alt="img1"> %>
                         <div class="carousel-caption">
                             <h1 class="wow fadeInLeftBig">Home Sweet Shared Home</h1>
                         <div class="description wow fadeInUp">
@@ -26,7 +27,8 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/backgrounds/bg2.jpg" class="d-block w-100" alt="img2">
+                    <%# <img src="assets/img/backgrounds/bg2.jpg" class="d-block w-100" alt="img2"> %>
+                     <%=image_tag("bg2.jpg", class: "d-block w-100", alt: "img-2")%>
                     <div class="carousel-caption">
                         <h1 class="wow fadeInLeftBig">Room Right Live Right</h1>
                         <div class="description wow fadeInUp">
@@ -37,7 +39,8 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/backgrounds/bg3.jpg" class="d-block w-100" alt="img3">
+                    <%# <img src="assets/img/backgrounds/bg3.jpg" class="d-block w-100" alt="img3"> %>
+                     <%=image_tag("bg3.jpg", class: "d-block w-100", alt: "img-3")%>
                     <div class="carousel-caption">
                         <h1 class="wow fadeInLeftBig">Join Us Today!</h1>
                         <div class="description wow fadeInUp">
@@ -65,12 +68,13 @@
 	            </div>
                 <!--feature 1 -->
                 <div class="features">
-                    <img
+                    <%# <img
                         src="assets/img/free.png"
                         data-src="img/digital.jpg"
                         alt="Computer"
                         class="features__img lazy-img"
-                    />
+                    /> %>
+                     <%=image_tag("free.png", class: "features__img lazy-img", alt: "free")%>
                     <div class="features__feature">
                         
                         <h4 class="features__header"> Everything Free</h4>
@@ -90,19 +94,23 @@
                             </p>
                         </div>
                     </div>
-                    <img
+                    <%# <img
                         src="assets/img/connect.png"
                         data-src="img/digital.jpg"
                         alt="Computer"
                         class="features__img lazy-img"
-                    />
+                    /> %>
+                    <%=image_tag("connect.png", class: "features__img lazy-img", alt: "connect")%>
+                    
                     <!--feature3-->
-                    <img
+                    <%# <img
                         src="assets/img/match.png"
                         data-src="img/digital.jpg"
                         alt="Computer"
                         class="features__img lazy-img"
-                    />
+                    /> %>
+                    <%=image_tag("match.png", class: "features__img lazy-img", alt: "match")%>
+                    
                     <div class="features__feature">
                         
                         <h4 class="features__header"> Match</h4>
@@ -136,39 +144,48 @@
                 <div class="col section-2-box wow fadeInLeft">
                     <section class="customer-logos slider">
                         <div class="slide">
-                            <img src="assets/img/nyc.jpg">
+                            <%# <img src="assets/img/nyc.jpg"> %>
+                            <%=image_tag("nyc.jpg")%>
                             <p class="text-center">New York</p>
                         </div>
                         <div class="slide">
-                            <img src="assets/img/san_jose.jpg">
+                            <%# <img src="assets/img/san_jose.jpg"> %>
+                            <%=image_tag("san_jose.jpg")%>
                             <p class="text-center">San Jose</p>
                         </div>
                         <div class="slide">
-                            <img src="assets/img/huston.jpg">
+                            <%# <img src="assets/img/huston.jpg"> %>
+                            <%=image_tag("huston.jpg")%>
                             <p class="text-center">Houston</p>
                         </div>
                         <div class="slide">
-                            <img src="assets/img/boston.jpg">
+                            <%# <img src="assets/img/boston.jpg"> %>
+                            <%=image_tag("boston.jpg")%>
                             <p class="text-center">Boston</p>
                         </div>
                         <div class="slide">
-                            <img src="assets/img/phonix.jpg">
+                            <%# <img src="assets/img/phonix.jpg"> %>
+                            <%=image_tag("phonix.jpg")%>
                             <p class="text-center">Phenix</p>
                         </div>
                         <div class="slide">
-                            <img src="assets/img/phila.jpg">
+                            <%# <img src="assets/img/phila.jpg"> %>
+                            <%=image_tag("phila.jpg")%>
                             <p class="text-center">Philadelphia</p>
                         </div>
                         <div class="slide">
-                            <img src="assets/img/la.jpg">
+                            <%# <img src="assets/img/la.jpg"> %>
+                            <%=image_tag("la.jpg")%>
                             <p class="text-center">Los Angeles</p>
                         </div>
                         <div class="slide">
-                            <img src="assets/img/chicago.jpg">
+                            <%# <img src="assets/img/chicago.jpg"> %>
+                            <%=image_tag("chicago.jpg")%>
                             <p class="text-center">Chicago</p>
                         </div>
                         <div class="slide">
-                            <img src="assets/img/salt_lake.png">
+                            <%# <img src="assets/img/salt_lake.png"> %>
+                            <%=image_tag("salt_lake.png")%>
                             <p class="text-center">Salt Lake City</p>
                         </div>
                         
@@ -197,7 +214,8 @@
 	                <div class="col-md-6 section-3-box wow fadeInLeft">
 	                	<div class="row">
 	                		<div class="col-md-3">
-	                			 <img class="rounded-circle" src="assets/img/panda.jpg" width="w-75 p-3" alt="person 1">
+	                			 <%# <img class="rounded-circle" src="assets/img/panda.jpg" width="w-75 p-3" alt="person 1"> %>
+                                 <%=image_tag("panda.jpg", class: "rounded-circle", alt: "panda")%>
                                  <p class="text-center">Allison Panda Seattle</p>
 	                		</div>
 	                		<div class="col-md-9">
@@ -213,7 +231,8 @@
 	                <div class="col-md-6 section-3-box wow fadeInLeft">
 	                	<div class="row">
 	                		<div class="col-md-3">
-	                			<img class="rounded-circle" src="assets/img/tortise.jpg" width="w-75 p-3" alt="person 2">
+	                			<%# <img class="rounded-circle" src="assets/img/tortise.jpg" width="w-75 p-3" alt="person 2"> %>
+                                <%=image_tag("tortise.jpg", class: "rounded-circle", alt: "tortise")%>
                                  <p class="text-center">Josh Tortise Miami</p>
 	                		</div>
 	                		<div class="col-md-9">
@@ -230,7 +249,8 @@
 	                <div class="col-md-6 section-3-box wow fadeInLeft">
 	                	<div class="row">
 	                		<div class="col-md-3">
-	                			<img class="rounded-circle" src="assets/img/racoon.jpg" width="w-75 p-3" alt="person3">
+	                			<%# <img class="rounded-circle" src="assets/img/racoon.jpg" width="w-75 p-3" alt="person3"> %>
+                                <%=image_tag("racoon.jpg", class: "rounded-circle", alt: "racoon")%>
                                  <p class="text-center">Jessica Racoon Atlanta</p>
 	                		</div>
 	                		<div class="col-md-9">
@@ -246,7 +266,9 @@
 	                <div class="col-md-6 section-3-box wow fadeInLeft">
 	                	<div class="row">
 	                		<div class="col-md-3">
-	                			<img class="rounded-circle" src="assets/img/dog.jpg" width="w-75 p-3" alt="person 4">
+	                			<%# <img class="rounded-circle" src="assets/img/dog.jpg" width="w-75 p-3" alt="person 4"> %>
+                                
+                                <%=image_tag("dog.jpg", class: "rounded-circle", alt: "dog")%>
                                  <p class="text-center">Adam Doggie Denver</p>
 	                		</div>
 	                		<div class="col-md-9">
@@ -264,7 +286,7 @@
         </div>
 
 		<!-- Section 4 -->
-        <div class="section-4-container section-container section-container-image-bg">
+        <div class="section-4-container section-container ">
 	        <div class="container">
 	            <div class="row">
 	                <div class="col section-4 section-description wow fadeInLeftBig">
