--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -15,7 +15,7 @@
             <div id="carousel-example" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <%=image_tag("bg1.jpg", class: "d-block w-100", alt: "img-1")%>
+                        <%=image_tag("bg_one.jpg", class: "d-block w-100", alt: "img-1")%>
                         <%# <img src="assets/img/backgrounds/bg1.jpg" class="d-block w-100" alt="img1"> %>
                         <div class="carousel-caption">
                             <h1 class="wow fadeInLeftBig">Home Sweet Shared Home</h1>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="carousel-item">
                     <%# <img src="assets/img/backgrounds/bg2.jpg" class="d-block w-100" alt="img2"> %>
-                     <%=image_tag("bg2.jpg", class: "d-block w-100", alt: "img-2")%>
+                     <%=image_tag("bg_two.jpg", class: "d-block w-100", alt: "img-2")%>
                     <div class="carousel-caption">
                         <h1 class="wow fadeInLeftBig">Room Right Live Right</h1>
                         <div class="description wow fadeInUp">
@@ -40,7 +40,7 @@
                 </div>
                 <div class="carousel-item">
                     <%# <img src="assets/img/backgrounds/bg3.jpg" class="d-block w-100" alt="img3"> %>
-                     <%=image_tag("bg3.jpg", class: "d-block w-100", alt: "img-3")%>
+                     <%=image_tag("bg_three.jpg", class: "d-block w-100", alt: "img-3")%>
                     <div class="carousel-caption">
                         <h1 class="wow fadeInLeftBig">Join Us Today!</h1>
                         <div class="description wow fadeInUp">
