Refactor home page code

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,11 +18,11 @@
 </nav>
 <%end%>
 
-<nav class="navbar navbar-dark navbar-expand-md navbar-no-bg">
+<nav class="navbar navbar-dark fixed-top navbar-expand-md navbar-no-bg">
 	<div class="container">
 		<div class="logo">
 			<a href="/">
-				<%= image_tag("logo.png", alt: "logo.png")%>
+				<%= image_tag("logo.png", alt: "logo")%>
 			</a>
 		</div>
 		<%# <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
