--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h4>About Us</h4>
+        <h4 class="white">About Us</h4>
         <br>
           <div class="container-fluid cxt-padded bg-faded">
             <div class="container">
@@ -13,7 +13,7 @@
                   <%= image_tag("about_us.jpg", alt: "logo.png",width:"w-75 p-3", class: "rounded-circle")%>
                 </div>
                 <div class="col-md-9 text-md-left text-center">
-                  <p class="lead">"Since the beginning of 2021, we have been making consistent contributions to this application. Your support will be critical to our development." </p>
+                  <p class="lead white">"Since the beginning of 2021, we have been making consistent contributions to this application. Your support will be critical to our development." </p>
                   
                 </div>
               </div>
@@ -27,27 +27,27 @@
     
         
     <div class="col">
-      <h4>Contact Us</h4>
+      <h4 class="white">Contact Us</h4>
       <br>
       <ul class="list-unstyled">
         <li >
-          <a href="https://www.linkedin.com/in/xiangyu-li-8810571b5/">Xiangyu Li,   jacobli@brandeis.edu</a>
+          <a class="white" href="https://www.linkedin.com/in/xiangyu-li-8810571b5/">Xiangyu Li,   jacobli@brandeis.edu</a>
         </li>
         <li >
-          <a href="https://www.linkedin.com/in/xuanlin-yan-a459a11b5/">Xuanlin Yan,   xyan20@brandeis.edu</a>
+          <a class="white" href="https://www.linkedin.com/in/xuanlin-yan-a459a11b5/">Xuanlin Yan,   xyan20@brandeis.edu</a>
         </li>
         <li >
-          <a href="https://www.linkedin.com/in/xulin-wang-6763611a8/">Xulin Wang, xwang143@brandeis.edu</a>
+          <a class="white" href="https://www.linkedin.com/in/xulin-wang-6763611a8/">Xulin Wang, xwang143@brandeis.edu</a>
         </li>
         <li >
-          <a href="https://www.linkedin.com/in/zheng-chu-62553a1a0/">Zheng Chu, czzzzn1001@gmail.com</a>
+          <a class="white" href="https://www.linkedin.com/in/zheng-chu-62553a1a0/">Zheng Chu, czzzzn1001@gmail.com</a>
         </li>
       </ul>
     </div> 
   </div> 
   <br>
   <div class="row text-center text-center justify-content-center align-self-center">
-    <h6>	&copy; Underoof by Team 7@2021. All Rights Reserved </h6>  
+    <h6 class="white">	&copy; Underoof by Team 7@2021. All Rights Reserved </h6>  
   </div>
   
   </div>            	
