--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,298 +1,7 @@
-<% if 5==3%>
-    <section class="home-form">
-    <%= render 'form'%>
-    </section>
-
-    <% if !logged_in?%>
-    <%= link_to "Sign up now!", signup_path%>
-    <% end %>
-<%end%>
-
-<!-- Top content -->
-<div class="top-content">
-    <div class="row no-gutters">
-        <div class="col">
-            <div id="carousel-example" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <%=image_tag("bg_one.jpg", class: "d-block w-100", alt: "img-1")%>
-                        <%# <img src="assets/img/backgrounds/bg1.jpg" class="d-block w-100" alt="img1"> %>
-                        <div class="carousel-caption">
-                            <h1 class="wow fadeInLeftBig">Home Sweet Shared Home</h1>
-                        <div class="description wow fadeInUp">
-                            <p>
-                                Here's to nights turned to mornings with roommates turned to family
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <%# <img src="assets/img/backgrounds/bg2.jpg" class="d-block w-100" alt="img2"> %>
-                     <%=image_tag("bg_two.jpg", class: "d-block w-100", alt: "img-2")%>
-                    <div class="carousel-caption">
-                        <h1 class="wow fadeInLeftBig">Room Right Live Right</h1>
-                        <div class="description wow fadeInUp">
-                            <p>
-                                Good roommates may be the single most important thing to have when one is away at school or work
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <%# <img src="assets/img/backgrounds/bg3.jpg" class="d-block w-100" alt="img3"> %>
-                     <%=image_tag("bg_three.jpg", class: "d-block w-100", alt: "img-3")%>
-                    <div class="carousel-caption">
-                        <h1 class="wow fadeInLeftBig">Join Us Today!</h1>
-                        <div class="description wow fadeInUp">
-                            <p>
-                                Join the homesharing movement with Underoof and find your right roomies
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-  <!-- Section 1 -->
-        <div class="section-1-container section-container">
-	        <div class="container">
-                <!-- section title -->
-	            <div class="row">
-	                <div class="col section-1 section-description wow fadeIn">
-	                    <h2>Features</h2>
-	                    <div class="divider-1 wow fadeInUp"><span></span></div>
-	                </div>
-	            </div>
-                <!--feature 1 -->
-                <div class="features">
-                    <%# <img
-                        src="assets/img/free.png"
-                        data-src="img/digital.jpg"
-                        alt="Computer"
-                        class="features__img lazy-img"
-                    /> %>
-                     <%=image_tag("free.png", class: "features__img lazy-img", alt: "free")%>
-                    <div class="features__feature">
-                        
-                        <h4 class="features__header"> Everything Free</h4>
-                        <div class="text-md-left text-center">
-                            <p class="lead">
-                                We provide you all the services at no cost. What you need to do is just setting up an account. Simple Enough!
-                            </p>
-                        </div>
-                    </div>
-                    <!--feature 2 -->
-                    <div class="features__feature">
-                        
-                        <h4 class="features__header">Connect</h4>
-                        <div class="text-md-left text-center">
-                            <p class="lead">
-                                Private and secure in-app messaging lets you interview and get to know each other with confidence.
-                            </p>
-                        </div>
-                    </div>
-                    <%# <img
-                        src="assets/img/connect.png"
-                        data-src="img/digital.jpg"
-                        alt="Computer"
-                        class="features__img lazy-img"
-                    /> %>
-                    <%=image_tag("connect.png", class: "features__img lazy-img", alt: "connect")%>
-                    
-                    <!--feature3-->
-                    <%# <img
-                        src="assets/img/match.png"
-                        data-src="img/digital.jpg"
-                        alt="Computer"
-                        class="features__img lazy-img"
-                    /> %>
-                    <%=image_tag("match.png", class: "features__img lazy-img", alt: "match")%>
-                    
-                    <div class="features__feature">
-                        
-                        <h4 class="features__header"> Match</h4>
-                        <div class="text-md-left text-center">
-                            <p class="lead">
-                                Our platform matches candidates with a unique compatibility score. 
-                                We make sure you get the best match!
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                
-                
-                            
-            </div>
-               
-        </div>
-  
-
-        <!-- Section 2 -->
-        <div class="section-2-container section-container section-container-gray-bg">
-	        <div class="container">
-	            <div class="row">
-	                <div class="col section-2 section-description wow fadeIn">
-                        
-                        <h2>Find Your Roommates In...</h2>
-                        
-	                </div>
-	            </div>
-
-                <div class="col section-2-box wow fadeInLeft">
-                    <section class="customer-logos slider">
-                        <div class="slide">
-                            <%# <img src="assets/img/nyc.jpg"> %>
-                            <%=image_tag("nyc.jpg")%>
-                            <p class="text-center">New York</p>
-                        </div>
-                        <div class="slide">
-                            <%# <img src="assets/img/san_jose.jpg"> %>
-                            <%=image_tag("san_jose.jpg")%>
-                            <p class="text-center">San Jose</p>
-                        </div>
-                        <div class="slide">
-                            <%# <img src="assets/img/huston.jpg"> %>
-                            <%=image_tag("huston.jpg")%>
-                            <p class="text-center">Houston</p>
-                        </div>
-                        <div class="slide">
-                            <%# <img src="assets/img/boston.jpg"> %>
-                            <%=image_tag("boston.jpg")%>
-                            <p class="text-center">Boston</p>
-                        </div>
-                        <div class="slide">
-                            <%# <img src="assets/img/phonix.jpg"> %>
-                            <%=image_tag("phonix.jpg")%>
-                            <p class="text-center">Phenix</p>
-                        </div>
-                        <div class="slide">
-                            <%# <img src="assets/img/phila.jpg"> %>
-                            <%=image_tag("phila.jpg")%>
-                            <p class="text-center">Philadelphia</p>
-                        </div>
-                        <div class="slide">
-                            <%# <img src="assets/img/la.jpg"> %>
-                            <%=image_tag("la.jpg")%>
-                            <p class="text-center">Los Angeles</p>
-                        </div>
-                        <div class="slide">
-                            <%# <img src="assets/img/chicago.jpg"> %>
-                            <%=image_tag("chicago.jpg")%>
-                            <p class="text-center">Chicago</p>
-                        </div>
-                        <div class="slide">
-                            <%# <img src="assets/img/salt_lake.png"> %>
-                            <%=image_tag("salt_lake.png")%>
-                            <p class="text-center">Salt Lake City</p>
-                        </div>
-                        
-                    </section>
-                </div>
-	            
-	        
-               
-            </div>
-        </div>
-
-		<!-- Section 3 -->
-        <div class="section-3-container section-container">
-	        <div class="container">
-	        	
-	            <div class="row">
-	                <div class="col section-3 section-description wow fadeIn">
-                 
-                        <h2>Check Out What They Say</h2>
-                        
-	                    <div class="divider-1 wow fadeInUp"><span></span></div>
-	                </div>
-	            </div>
-	            
-	            <div class="row">
-	                <div class="col-md-6 section-3-box wow fadeInLeft">
-	                	<div class="row">
-	                		<div class="col-md-3">
-	                			 <%# <img class="rounded-circle" src="assets/img/panda.jpg" width="w-75 p-3" alt="person 1"> %>
-                                 <%=image_tag("panda.jpg", class: "rounded-circle", alt: "panda")%>
-                                 <p class="text-center">Allison Panda Seattle</p>
-	                		</div>
-	                		<div class="col-md-9">
-	                			<h3>Best roommates match application ever!</h3>
-		                    	<p>
-		                    		Once I got matched, I can chat with them for more information.
-                                    Underoof is so beautifully designed, easy to use and search. 
-                                    I will definitely share this with my friends!
-		                    	</p>
-	                		</div>
-	                	</div>
-	                </div>
-	                <div class="col-md-6 section-3-box wow fadeInLeft">
-	                	<div class="row">
-	                		<div class="col-md-3">
-	                			<%# <img class="rounded-circle" src="assets/img/tortise.jpg" width="w-75 p-3" alt="person 2"> %>
-                                <%=image_tag("tortise.jpg", class: "rounded-circle", alt: "tortise")%>
-                                 <p class="text-center">Josh Tortise Miami</p>
-	                		</div>
-	                		<div class="col-md-9">
-	                			<h3>It has everything I looked for.</h3>
-		                    	<p>
-		                    		It was long ago when I was the one looking at all these websites and the one I would feel comfortable to share room with. I was in heaven when I reached Underoof, and looking back all I wish I have wasted less time chec...
-		                    	</p>
-	                		</div>
-	                	</div>
-	                </div>
-	            </div>
-	            
-	            <div class="row">
-	                <div class="col-md-6 section-3-box wow fadeInLeft">
-	                	<div class="row">
-	                		<div class="col-md-3">
-	                			<%# <img class="rounded-circle" src="assets/img/racoon.jpg" width="w-75 p-3" alt="person3"> %>
-                                <%=image_tag("racoon.jpg", class: "rounded-circle", alt: "racoon")%>
-                                 <p class="text-center">Jessica Racoon Atlanta</p>
-	                		</div>
-	                		<div class="col-md-9">
-	                			<h3>Overrall good experience</h3>
-		                    	<p>
-		                    		Quick and easy roommates hunt. Lots of tools to help you get it 
-                                    done as efficiently as possible. Overral it was a good experience 
-                                    for me.
-		                    	</p>
-	                		</div>
-	                	</div>
-	                </div>
-	                <div class="col-md-6 section-3-box wow fadeInLeft">
-	                	<div class="row">
-	                		<div class="col-md-3">
-	                			<%# <img class="rounded-circle" src="assets/img/dog.jpg" width="w-75 p-3" alt="person 4"> %>
-                                
-                                <%=image_tag("dog.jpg", class: "rounded-circle", alt: "dog")%>
-                                 <p class="text-center">Adam Doggie Denver</p>
-	                		</div>
-	                		<div class="col-md-9">
-	                			<h3>Easy to find a roommate here.</h3>
-		                    	<p>
-		                    		Just open an account and fill in your profile, they will match you with 
-                                    someone immediately. No annoying ads, no complex procedures...Underoof does the real job.
-		                    	</p>
-	                		</div>
-	                	</div>
-	                </div>
-	            </div>
-
-	        </div>
-        </div>
-
-		<!-- Section 4 -->
-        <div class="section-4-container section-container ">
-	        <div class="container">
-	            <div class="row">
-	                <div class="col section-4 section-description wow fadeInLeftBig">
-	                	<h2>It's Never Too Late to Start Right Now!</h2>
-	                    <button class="btn-lg round-shape-large p-3"><%= link_to 'Open your free account today', signup_path%></button>
-	                </div>
-	            </div>
-	        </div>
-        </div>
+<%= render 'layouts/top'%>
+<%= render 'layouts/features'%>
+<%= render 'layouts/cities'%>
+<%= render 'layouts/testimonials'%>       
+<%= render 'layouts/final_section'%>  
+		
+		
