Add font-awesome5-rails gem

--- a/app/assets/stylesheets/preferences.scss
+++ b/app/assets/stylesheets/preferences.scss
@@ -1,5 +1,5 @@
-@import "font-awesome-sprockets";
-@import "font-awesome";
+// @import "font-awesome-sprockets";
+// @import "font-awesome";
 // Place all the styles related to the preferences controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
