Implement live chat Ajax part

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
 <div>
-    <div class="font-weight-bold"><%= message.user.name %></div>
-    <div><%= message.body %></div>
+    <div class="font-weight-bold text-left"><%= message.user.name %></div>
+    <div class="text-left"><%= message.body %></div>
 </div>
