--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" data-controller = "channel" data-channel-id ="<%= @channel.id%>">
   <div class="col-sm-2">
     <div class="d-flex justify-content-between">
       <h6>Channels</h6>
@@ -27,11 +27,13 @@
   </div>
 
   <div class="col-sm-10">
-    <%= render @channel.messages %>
+    <div data-target="channel.messages">
+      <%= render @channel.messages %>
+    </div>
 
     <% if current_user.channels.include?(@channel) %>
-      <%= form_with model: [@channel, Message.new] do |form| %>
-        <%= form.text_field :body, class: "form-control" %>
+      <%= form_with model: [@channel, Message.new], data:{action: "ajax:success->channel#clearMessage"}, local:false do |form| %>
+        <%= form.text_field :body, class: "form-control", data:{target: "channel.newMessage"} %>
       <% end %>
     <% else %>
       <%= link_to "Join #{@channel.name}", channel_channel_user_path(@channel), method: :post %>
