--- a/app/views/preferences/_form.html.erb
+++ b/app/views/preferences/_form.html.erb
@@ -2,22 +2,36 @@
     <%= f.hidden_field :direction, value: params[:direction] %>
     <%= f.hidden_field :sort, value: params[:sort] %>
 
-    <%= render "state_city_select"%>
-
-    <%= f.label "Min Price"%>
-    <%= f.number_field :min_price, in: 0..2500, step: 1, value: params[:min_price]%>
-
-    <%= f.label "Max Price"%>
-    <%= f.number_field :max_price, in: 0..5000, step: 1, value: params[:max_price]%>
-
-    <%= f.label "Start Date"%>
-    <%= f.date_field :start_date, value: params[:start_date] %>
-
-    <%= f.label "End Date"%>
-    <%= f.date_field :end_date, value: params[:end_date] %>
-
-    <%= f.label "Pet Preference"%>
-    <%= f.select :pet,["Dog", "Cat", "No"], selected: params[:pet], include_blank: true %>
+    <div class="row justify-content-between">
+        <%= render "state_city_select"%>
+        <div class="col-md-2">
+            <%= f.label "Pet Preference"%>
+            <%= f.select :pet,["Dog", "Cat", "No"], {selected: params[:pet], include_blank: true}, {class: "form-control"} %>
+        </div>
+    </div>
     
-    <%= f.submit yield(:button_text)%>
+    <div class="row">
+        <div class="col-sm-2">
+            <%= f.label "Min Price", class: " col col-form-label"%>
+            <%= f.number_field :min_price, in: 0..2500, step: 1, value: params[:min_price], class: "form-control"%>
+        </div>
+        <div class="col-sm-2">
+            <%= f.label "Max Price"%>
+            <%= f.number_field :max_price, in: 0..5000, step: 1, value: params[:max_price], class: "form-control"%>
+        </div>
+        <div class="col-sm-4">
+            <%= f.label "Start Date"%>
+            <%= f.date_field :start_date, value: params[:start_date], class: "form-control" %>
+        </div>
+        <div class="col-sm-4">
+            <%= f.label "End Date"%>
+            <%= f.date_field :end_date, value: params[:end_date], class: "form-control" %>
+        </div>
+    </div>
+    <br>
+    <div class= "row justify-content-end"> 
+        <div class="col-md-2">
+            <%= f.submit yield(:button_text), class:"btn btn-secondary btn-block"%>
+        </div>   
+    </div>
 <% end %>
