--- a/app/views/preferences/_state_city_select.html.erb
+++ b/app/views/preferences/_state_city_select.html.erb
@@ -1,7 +1,9 @@
+<div class="col-md-3">
 <%= label_tag "State" %>
-<%= select_tag :state, options_for_select(CS.states(:us).except(:DC).invert)%>
+<%= select_tag :state, options_for_select(CS.states(:us).except(:DC).invert), {:class => 'form-control'}%>
+</div>
 
-
+<div class="col-md-5">
 <%= label_tag :county_label, "City" %>
-<%= select_tag :city, options_for_select({}) %>
-
+<%= select_tag :city, options_for_select({}), {:class => 'form-control'} %>
+</div>
