--- a/app/views/preferences/show.html.erb
+++ b/app/views/preferences/show.html.erb
@@ -1,10 +1,12 @@
-<div class="container mt-3">
+<div class="row mt-3">
+    <div class="col">
     <h3 class="show-title">Personal Information</h3>
-    <span class="fa fa-address-card span-icon"> Name: <%= @preference.user.name%></span><br><br>
-    <span class="fa fa-venus-mars span-icon"> Gender: <%= @preference.user.gender%></span><br><br>
-    <span class="fa fa-envelope span-icon"> Email: <%= @preference.user.email%></span><br><br>
+    <%= fa_icon("address-card")%> Name:<%=  @preference.user.name%><br>
+    <%= fa_icon("venus-mars")%>Gender: <%= @preference.user.gender%></span><br>
+    <%= fa_icon("envelope")%> Email: <%= @preference.user.email%></span><br>
+    </div>
 
-
+    <div class="col">
     <h3 class="show-title">Room Preferences</h3>
     <p class="info">State: <%= State.find(@preference.state_id).name%></p>
     <p class="info">City: <%= City.find(@preference.city_id).name%></p>
@@ -12,6 +14,6 @@
     <p class="info">Price: $<%= @preference.min_price%> - $<%= @preference.max_price%></p>
     <p class="info">Date: <%= @preference.start_date%> - <%= @preference.end_date%></p>
     <p class="info">Pet preference: <%= @preference.pet%></p>
-    
+    <div>
     <%= link_to "Let's chat!", channels_path ,class:"btn btn-dark" %>
 </div>
