--- a/app/views/channels/new.html.erb
+++ b/app/views/channels/new.html.erb
@@ -1,5 +1,9 @@
 <h1>New Channel</h1>
 
+
 <%= render 'form', channel: @channel %>
 
+
+<div class="row justify-content-md-center">
 <%= link_to 'Back', channels_path %>
+</div>
