--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -1,12 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Channels</h1>
-
-<table class="table table-hover table-striped">
-  <thead>
+<br>
+<table class="table table-hover table-striped ml-auto mr-auto" style="width: 50%">
+  <thead class="thead-dark">
     <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
+      <th style="width: 50%">Name</th>
+      <th>Show Messages</th>
+      <th>Edit Name</th>
+      <th>Destroy</th>
     </tr>
   </thead>
 
