--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row" data-controller = "channel" data-channel-id ="<%= @channel.id%>">
+<div class="row mt-3" data-controller = "channel" data-channel-id ="<%= @channel.id%>">
   <div class="col-sm-2">
     <div class="d-flex justify-content-between">
       <h6>Channels</h6>
@@ -17,7 +17,7 @@
     <hr/>
 
     <div class="d-flex justify-content-between">
-      <h6>User</h6>
+      <h6>Channel Members</h6>
     </div>
     <% @channel.users.each do |user| %>
       <div>
@@ -36,7 +36,7 @@
         <%= form.text_field :body, class: "form-control", data:{target: "channel.newMessage"} %>
       <% end %>
     <% else %>
-      <%= link_to "Join #{@channel.name}", channel_channel_user_path(@channel), method: :post %>
+      <button class="btn btn-secondary"><%= link_to "Join #{@channel.name}", channel_channel_user_path(@channel), method: :post %></button>
     <% end %>
   </div>
 </div>
