--- a/app/views/preferences/index.html.erb
+++ b/app/views/preferences/index.html.erb
@@ -10,7 +10,7 @@
 
   <div class="row">
     <table class="table table-striped table-hover">
-      <thead class="thead-dark">
+      <thead class="thead-light">
         <tr>
             <th>Name</th>
             <th>State</th>
