--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -20,15 +20,20 @@
       <h6>Channel Members</h6>
     </div>
     <% @channel.users.each do |user| %>
-      <div>
-        <%= user.name %>
-      </div>
+      <div><%= user.name %></div>
     <% end %>
   </div>
 
   <div class="col-sm-10">
-    <div data-target="channel.messages">
-      <%= render @channel.messages %>
+    <div class="card">
+      <div class="card-header"><%= @channel.name %></div>
+        <div class="card-body card-height">
+          <ul class="chat-list">
+            <div data-target="channel.messages">
+              <%= render @channel.messages %>
+            </div>
+          </ul>
+         </div>
     </div>
 
     <% if current_user.channels.include?(@channel) %>
@@ -37,7 +42,8 @@
       <% end %>
     <% else %>
       <button class="btn btn-secondary"><%= link_to "Join #{@channel.name}", channel_channel_user_path(@channel), method: :post %></button>
-    <% end %>
+    <% end %> 
+
   </div>
 </div>
 
