--- a/app/views/preferences/show.html.erb
+++ b/app/views/preferences/show.html.erb
@@ -4,6 +4,14 @@
     <%= fa_icon("address-card")%> Name:<%=  @preference.user.name%><br>
     <%= fa_icon("venus-mars")%>Gender: <%= @preference.user.gender%></span><br>
     <%= fa_icon("envelope")%> Email: <%= @preference.user.email%></span><br>
+    
+    <%# Display user profile picture upload, need to be refactored!  %>
+    <% if @preference.user.image.attached?%>
+        <%= image_tag(@preference.user.image.variant(resize:"200x200")) %>
+    <% else %>
+        
+        <%= image_tag("default_avatar.png", size: '200x200')%> 
+    <% end %>
     </div>
 
     <div class="col">
