--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,10 +1,25 @@
-<div class = "row">
-    <%= link_to "Personal Information", edit_user_path(current_user)%>
-</div>
-<div class = "row">
-    <%if current_user.preference.nil?%>
-        <%= link_to "Room Preference", new_preference_path%>
-    <% else %>
-        <%= link_to "Room Preference", edit_preference_path(current_user.preference)%>
-    <%end%>
+<div class="row justify-content-center">
+    <div class="bg-light border-right" id="sidebar-wrapper">
+      <div class="sidebar-heading">Settings</div>
+        <div class="list-group list-group-flush">
+            <div class="list-group-item list-group-item-action bg-light">
+                <%= link_to "Personal Information", edit_user_path(current_user)%>
+            </div>
+
+            <div class="list-group-item list-group-item-action bg-light">
+            <%if current_user.preference.nil?%>
+
+                <%= link_to "Room Preference", new_preference_path%>
+            <% else %>
+                <%= link_to "Room Preference", edit_preference_path(current_user.preference)%>
+            <%end%>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-8 pl-5">
+        <h1><%= yield(:profile_title)%></h1>
+        <br>
+        <%= render yield(:profile_content)%>
+    </div>
 </div>
