--- a/app/views/preferences/_new_form.html.erb
+++ b/app/views/preferences/_new_form.html.erb
@@ -2,42 +2,46 @@
 
     <%= render 'shared/error_messages', object: f.object %>
 
-    <div class="form-group">
-    <%= @old_state%>
-    <%= @old_city%>
+    <div class="row justify-content-between align-items-end">
+        <%= render "state_city_select"%>
+        <p>State: <%= @old_state%></p>
+        <p>City: <%= @old_city%></p>
     </div>
-
-    <div class="form-group">
-    <%= render "state_city_select"%>
+    <br>
+    <div class="row justify-content-between">
+        <div class="col">
+        <%= f.label "Location"%>
+        <%= f.text_field  :location, class:"form-control" %>
+        </div>
     </div>
-
-    <div class="form-group">
-    <%= f.label "Location"%>
-    <%= f.text_field  :location %>
+    <br>
+    <div class="row justify-content-between">
+        <div class="col">
+            <%= f.label "Min Price"%>
+            <%= f.number_field :min_price, required: true, class:"form-control" %>
+        </div>
+        <div class="col">
+            <%= f.label "Max Price"%>
+            <%= f.number_field :max_price, required: true, class:"form-control" %>
+        </div>
+        <div class="col">
+            <%= f.label "Pet Preference"%>
+            <%= f.select :pet,["Dog", "Cat", "No"], {include_blank: true}, {class:"form-control"}%>
+        </div>
     </div>
-
-    <div class="form-group">
-    <%= f.label "Min Price"%>
-    <%= f.number_field :min_price, required: true %>
-
-    <%= f.label "Max Price"%>
-    <%= f.number_field :max_price, required: true %>
+    <br>
+    <div class="row justify-content-between">
+        <div class="col">
+            <%= f.label "Start Date"%>
+            <%= f.date_field :start_date, class:"form-control" %>
+        </div>
+        <div class="col">
+            <%= f.label "End Date"%>
+            <%= f.date_field :end_date, class:"form-control" %>
+        </div>
     </div>
-
-    <div class="form-group">
-    <%= f.label "Start Date"%>
-    <%= f.date_field :start_date %>
-
-    <%= f.label "End Date"%>
-    <%= f.date_field :end_date %>
-    </div>
-
-    <div class="form-group">
-    <%= f.label "Pet Preference"%>
-    <%= f.select :pet,["Dog", "Cat", "No"], include_blank: true%>
-    </div>
-
-    <div class="form-group">
-    <%= f.submit yield(:button_text)%>
+    <br>
+    <div class="row justify-content-center">
+        <%= f.submit yield(:button_text), class:"btn btn-dark"%>
     </div>
 <% end %>
