--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,5 @@
-<div class="row align-items-center">
-    <div class="col align-self-start"></div>
-    
-    <div class="col-md-8 align-self-center">
+<div class="row justify-content-md-center">
+    <div class="col-md-8">
     <%= form_for @user, local: true do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
@@ -33,6 +31,4 @@
      
     <% end %>
    </div>
-
-   <div class="col align-self-end"></div>
 </div>
