--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,13 +1,4 @@
 <% provide(:button_text, 'Save changes') %>
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-3 col-md-offset-3">
-      <%= render 'shared/sidebar' %>
-    </div>
-    <div class="col-md-6 col-md-offset-3">
-      <h1>Personal information</h1>
-      <%= render 'form' %>
-    </div>
-  </div>
-</div>
+<% provide(:profile_content, 'users/form') %>
+<% provide(:profile_title, 'Personal Information') %>
+<%= render 'shared/sidebar'%>
