--- a/app/views/preferences/show.html.erb
+++ b/app/views/preferences/show.html.erb
@@ -1,30 +1,20 @@
-<div class="row mt-3">
-    <div class="col">
-    <h3 class="show-title">Personal Information</h3>
-    <%= fa_icon("address-card")%> Name:<%=  @preference.user.name%><br>
-    <%= fa_icon("venus-mars")%>Gender: <%= @preference.user.gender%></span><br>
-    <%= fa_icon("envelope")%> Email: <%= @preference.user.email%></span><br>
-    
-    <%# Display user profile picture upload, need to be refactored!  %>
-    <% if @preference.user.image.attached?%>
-        <%= image_tag(@preference.user.image.variant(resize:"200x200")) %>
-    <% else %>
-        
-        <%= image_tag("default_avatar.png", size: '200x200')%> 
-    <% end %>
+<div class="container">
+    <div class="main-body">
+      <div class="row gutters-sm">
+        <div class="col-md-4 mb-3">
+          <%# Display of user profile picture %>
+          <%= render 'display_of_avatar'%>
+          <br>
+          <%# Display of user info %>
+          <%= render 'display_of_info'%>
+        </div>
+        <%# Display of Room Preference %>
+        <%= render 'display_of_preference'%>
+      </div>
     </div>
-
-    <div class="col">
-    <h3 class="show-title">Room Preferences</h3>
-    <p class="info">State: <%= State.find(@preference.state_id).name%></p>
-    <p class="info">City: <%= City.find(@preference.city_id).name%></p>
-    <p class="info">Location: <%= @preference.location%></p>
-    <p class="info">Price: $<%= @preference.min_price%> - $<%= @preference.max_price%></p>
-    <p class="info">Date: <%= @preference.start_date%> - <%= @preference.end_date%></p>
-    <p class="info">Pet preference: <%= @preference.pet%></p>
-    </div>
-</div>
-
-<div class="row justify-content-md-center">
-<%= link_to "Let's chat!", direct_message_path(@preference.user.id) ,class:"btn btn-dark" %>
-</div>
+  </div>
+              
+             
+                
+                
+              
