Refine Home and Chat index pages UI

--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -26,4 +26,4 @@
 
 <br>
 
-<button class="btn btn-secondary"><%= link_to 'New Channel', new_channel_path %></button>
+<%= link_to 'New Channel', new_channel_path, class:"btn btn-secondary"%>
