--- a/app/views/welcome/_final_section.html.erb
+++ b/app/views/welcome/_final_section.html.erb
@@ -1,4 +1,5 @@
 <!-- Section 4 -->
+<%if !logged_in?%>
 <div class="section-4-container section-container">
     <div class="container">
         <div class="row">
@@ -9,3 +10,4 @@
         </div>
     </div>
 </div>
+<%end%>
