--- a/app/views/preferences/_display_of_avatar.html.erb
+++ b/app/views/preferences/_display_of_avatar.html.erb
@@ -10,7 +10,7 @@
         <% end %>
         <div class="mt-3">
             
-            <%= link_to "Let's chat!", channels_path ,class:"btn btn-dark" %>
+            <%= link_to "Let's chat!", direct_message_path(@preference.user.id) ,class:"btn btn-dark" %>
         </div>
         </div>
     </div>
